REQ-015: add remaining tests to secure coverage